assets/css/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    outline: 0;
    padding: 0
}

@keyframes slideInLeft{
    from {
        transform: translateX(-300px);
      }
    
      to {
        transform: translateX(0);
      }
}

@keyframes slideInRight {
    from {
      transform: translateX(300px);
    }
  
    to {
      transform: translateX(0);
    }
}

@keyframes slideInTop {
    from {
      transform: translateY(300px);
    }
  
    to {
      transform: translateY(0);
    }
}

:root {
    --primary-color: #efb815
}

body,
button {
    pointer-events: all;
    color: #444;
    font-family: 'Montserrat', sans-serif;
}

#wrapper{
    padding-top: 20px;
    text-align: center;
}

a,
button {
    cursor: pointer
}

a {
    color: inherit;
    text-decoration: none
}

ul {
    list-style: inside
}

li {
    list-style: none
}

img {
    border: none
}

section {
    min-height: 100vh
}

.container {
    margin-left: auto;
    margin-right: auto;
    max-width: 62rem;
    padding: 0 1rem;
    width: 100%
}


.navbar {
    background-color: #101010;
    border-bottom: .0625rem solid rgba(68, 68, 68, .25);
    height: 5rem;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 999;
}

.navbar .container {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    justify-content: space-between
}

.navbar .navbar-brand {
    align-items: center;
    display: flex;
    font-size: 1.125rem;
    font-weight: 500;
    margin-left: .5rem;
    text-transform: uppercase
}

.navbar .navbar-brand img {
    display: block;
    height: 2rem;
    margin: 0
}

.navbar .navlinks {
    display: none;
    color: #960d0d;
    font-size: 1rem;
    flex-basis: 100%;
    height: 100%;
    text-align: center;
    text-transform: uppercase;
}

.navbar .navlinks li {
    font-weight: 300;
    display: flex;
    justify-content: center
}

.navbar .navlinks li a {
    margin-bottom: .5rem;
    margin-top: 1.5rem
}

.menu {
    background-color: transparent;
    border: none
}

.linha {
    background-color: #f3f3f3;
    height: .25rem;
    width: 1.875rem;
    margin: 5px;
}

main {
    display: flex;
    flex-direction: column;
}

.home {
    display: flex;
    flex-direction: column;
    height: 100%;
    align-items: center;
    justify-content: center;
    background: rgb(150,13,13);
    background: radial-gradient(circle, rgba(150,13,13,1) 0%, rgba(158,35,35,1) 50%, rgba(56,0,0,1) 100%);
    color: #212121;
}

.home .container-picture picture img{
    display: block;
    height: 22.5rem;
    margin: 0 auto;
    padding-top: 20px;
    padding-bottom: 20px
}

.home h2{
    font-size: 30px;
    color: #fff;
    width: 55%;
    text-align: center;
    margin-bottom: 20px;
}

.home h3{
    font-size: 18px;
    color: #fff;
    width: 50%;
    text-align: center;
    margin-bottom: 30px;
    font-weight: 300;
}

.home .container-video{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    text-align: center;
    padding-bottom: 10px;
}

.home .container h1{
    font-size: 50px;

}

.home .botao-cta-1 {
    border: none;
    border-radius: 5px;
    background: #80D315;
    color: #212121;
    -webkit-box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
    display: flex;
    width: 45%;
    font-size: 18px;
    font-weight: 600;
    margin: 0 auto;
    min-width: 5.25rem;
    min-height: 3rem;
    padding: .85rem;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    margin-bottom: 30px;
    text-transform: uppercase;
    transition: .71s
}

.home .botao-cta-1 svg {
    color: #212121;
    height: 1.875rem;
    transition: transform .2s linear;
    width: 1.875rem;
    margin-right: 10px;
}

.home .botao-cta-1:hover {
    background: #e4ffc0;
    border: none;
    transition: .72s
}

.body {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background: #fff;
    color: #101010;
}

.body .container-picture picture img{
    display: block;
    height: 37.5rem;
    margin: 0 auto;
    padding-top: 20px;
    padding-bottom: 20px
}

.body .container-picture {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    text-align: center;
    height: 50vh;
}

.body .container{
    display: flex;
    flex-direction: column;
}

.body h2{
    margin: 0 auto;
    font-size: 30px;
    color: #212121;
    width: 100%;
    text-align: center;
    padding-bottom: 20px;
}

.body .botao-cta-2 {
    border: none;
    border-radius: 5px;
    background: #80D315;
    color: #212121;
    -webkit-box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
    display: flex;
    width: 85%;
    font-size: 18px;
    font-weight: 600;
    margin: 0 auto;
    min-width: 5.25rem;
    min-height: 3rem;
    padding: .85rem;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    margin-bottom: 30px;
    text-transform: uppercase;
    transition: .71s
}

.body .botao-cta-2 svg {
    color: #212121;
    height: 1.875rem;
    transition: transform .2s linear;
    width: 1.875rem;
    margin-right: 10px;
}

.body .botao-cta-2:hover {
    background: #e4ffc0;
    border: none;
    transition: .72s
}

.end {
    background: #191919;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.end .container{
    display: flex;
    flex-direction: column;
}

.end .container {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 50px;
    text-align: center;
}

.end .container h1{
    font-size: 35px;
    color: #fff
}

.end .container-items {
    padding-bottom: 15px;
    padding-top: 15px;
    list-style: none;
    margin: 0 auto;
    width: 97.5%;
    height: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly
}

.end .container-items .box-items {
    color: #e50000;
    border-radius: 3%;
    display: flex;
    flex-direction: column;
    align-items: center;
    background: #101010;
    text-align: center;
    height: 300px;
    width: 32%;
    padding-top: 50px;
}

.end .container-items .box-items h1{
    margin-top: 20px;
    font-size: 18px;
    font-weight: 400;
    width: 70%;
    color: #fff
}

.end .container-items .box-items h1 picture img{
    margin-top: 10px;
    width: 2.5rem;
}

.end .container-round {
    display: flex;
    align-items: center;
    margin-top: 50px;
    background: #e50000;
    height: 75vh;
    width: 95%;
    border-radius: 10px;
    margin-bottom: 20px;
}

.end .container-round .container-picture picture img{
    display: block;
    height: 22.5rem;
    margin: 0 auto;
    padding-top: 20px;
    padding-bottom: 20px;
}

.end .container-round .container-picture {
    display: flex;
    align-items: center;
    margin-left: 70px;
    justify-content: center;
    padding: 30px;
    text-align: center;
    height: 50vh;
}

.end .container-round h1 {
    margin: 0 auto;
    font-size: 30px;
    color: #fff;
    width: 80%;
    text-align: center;
    padding-top: 20px;
    padding-bottom: 20px;
}

.end .botao-cta-3 {
    border: none;
    border-radius: 5px;
    background: #80D315;
    color: #212121;
    -webkit-box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
    display: flex;
    width: 79.5%;
    font-size: 18px;
    font-weight: 600;
    margin: 0 auto;
    min-width: 5.25rem;
    min-height: 3rem;
    padding: .85rem;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    margin-bottom: 30px;
    text-transform: uppercase;
    transition: .71s
}

.end .botao-cta-3 svg {
    color: #212121;
    height: 1.875rem;
    transition: transform .2s linear;
    width: 1.875rem;
    margin-right: 10px;
}

.end .botao-cta-3:hover {
    background: #e4ffc0;
    border: none;
    transition: .72s
}

footer {
    text-align: center;
    background: #191919;
}

footer .footer-copyright {
    color: #960d0d;
    font-weight: 300;
    padding-top: 1rem;
    padding-bottom: 2rem;
    text-align: center
}

@media (max-width: 952px) {
    .body{
        flex-direction: column;
    }
    .body .container-picture {
        padding-top: 60px;
        height: 95vh;
    }
    .body h2{
        margin-top: 20px;
    }
    .end .container-round{
        padding: 30px;
        flex-direction: column;
        height: fit-content;
    }
    .end .container-round .container-picture {
        margin: 0 auto;
    }
    .end .container-picture {
        padding-top: 60px;
        height: 95vh;
    }
    .end h2{
        margin-top: 20px;
    }
}

@media (max-width: 767px) {
    /*
    .navbar .navlinks li a {
        padding-bottom: 1.5rem;
    }
    .navbar.active {
        height: auto;
        padding-top: 24px;
    }
    .navbar.active .navlinks {
        display: block;
    }
    .navbar.active .menu .linha:nth-child(1){
        position: absolute;
        margin: 0 auto;
        transform: rotate(45deg);
        transition: .25s ease-in;
    }
    .navbar.active .menu .linha:nth-child(2){
        display: none;
    }
    .navbar.active .menu .linha:nth-child(3){
        margin: 0 auto;
        transform: rotate(-45deg);
        transition: .25s ease-in;
    }
    */
    .home{
        padding-bottom: 30px;
    }
    .home h2{
        font-size: 22px;
        width: 85%;
        margin-bottom: 20px;
    }
    .home h3{
        font-size: 16px;
        width: 80%;
        margin-top: 25px;
        margin-bottom: 0px;
    }
    .home .container-video{
        height: auto;
        width: 100%;
        padding-bottom: 20px;
    }
    .iframe-container {
        position: relative;
        width: 100%;
        padding-bottom: 56.25%;
        height: 0
    }
    .iframe-container iframe {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%
    }
    .home .botao-cta-1 {
        width: 90%;
        font-size: 15px;
        font-weight: 600;
        margin: 0 auto;
        min-width: 6.25rem;
        min-height: 3.5rem;
        padding: .85rem;
    }
    .body {
        flex-direction: column;
    }
    .body .container-picture picture img{
        display: block;
        height: auto;
        width: 100%;
    }
    .body .container-picture {
        height: 95vh;
    }
    .body h2{
        font-size: 22px;
        width: 85%;
        padding-top: 40px;
    }
    .body .container{
        padding-bottom: 40px;
    }
    .body .botao-cta-2 {
        width: 97.5%;
        font-size: 15px;
        font-weight: 600;
        margin: 0 auto;
        min-width: 6.25rem;
        min-height: 3.5rem;
        padding: .85rem;
    }
    .end .container{
        padding: 0;
        margin-top: 40px;
    }
    .end .container h1{
        width: 90%;
        font-size: 25px;
    }
    .end .container-items .box-items {
        display: block;
        padding: 25px;
        width: 100%;
        text-align: center;
        margin: 10px;
        height: fit-content;
    }
    .end .container-items .box-items h1 {
        margin: 0 auto;
        padding-top: 20px;
        width: 60%;
    }
    .end .botao-cta-3 {
        width: 97.5%;
        font-size: 15px;
        font-weight: 600;
        margin: 0 auto;
        min-width: 6.25rem;
        min-height: 3.5rem;
        padding: .85rem;
    }
}

@media (max-width: 675px) {
    .body{
        min-height: 70vh;
    }
    .body .container-picture picture img{
        padding: 0;
    }
    .body .container-picture {
        padding-top: 30px;
        padding-bottom: 0px;
        height: auto;
    }
    .body h2{
        padding-top: 0px;
        margin-top: 0px;
        padding-bottom: 30px;
    }
    .end .container-items .box-items h1 {
        width: 90%;
    }
}

